<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/samples_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/samples_fab"
        android:orientation="vertical"
        android:padding="@dimen/regular_offset">

        <TextView
            android:id="@+id/sample_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sample_subhead"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Create A New Meal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sample_text_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input1"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:hint="Dish" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Calories" />

        <EditText
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Protein" />

        <EditText
            android:id="@+id/input4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Fat" />

        <EditText
            android:id="@+id/input5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Meals  (Count)" />


    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/samples_fab"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/regular_offset"
            android:src="@drawable/ic_done" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>